k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: containerhub
  labels:
    name: containerhub
    environment: production
